[package]
name = "authentic_time_service"
version = "0.1.0"
edition = "2021"
authors = ["Yuvraj Chhetri yuvichh01@gmail.com"]
description = "An implementation of the Authentic Time Service trust task for Trust Spanning Protocol (TSP)"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
ed25519-dalek = "1.0.1"
rand = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }

[[bin]]
name = "time_service_example"
path = "src/example.rs"
